chore: Fix bugs - external CSS leaks, sending empty queries, CSSStylesheet constructor error on mobile (#21)
* fix: reset shadow host styles to separate external CSS from web component

* fix: Disable button and input submit when query field is empty.

* fix: Fall back to style element if CSSStyleSheet constructor is not supported.

* Assign loading conditions to a single variable.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+:host {
+  all: initial;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
 @import "./components/chatView.scss";
 @import "./components/loader.scss";
 @import "./vui/_index.scss";
